Fixed minor footer layout issue.

--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -66,13 +66,17 @@ footer
   font-size: 0.9em
   padding: 1em
   
-  a
-    margin-right: 1em
+  .subscribe
+    float: left  
+    
+    a
+      margin-right: 1em
   
   .add
     float: right
   
   .fork
+    clear: both
     font-size: 0.8em
 
 h1, h2, h3, h4
